  produce the special floating point values for nan/inf/infinity.

- Added %D, %e, %F, %g, %G and %h for strftime(); repaired %I.

- Documented __strip_double_slash() and plugged in a memmove()
  in place of the copying loop.

- Modified __translate_unix_to_amiga_path_name() and
  __translate_amiga_to_unix_path_name() to not to call strlen()
  on the results of __strip_double_slash().


c.lib 1.192 (12.5.2005)

- Changed how errors are detected, as returned by Write(), Read() and
  Seek(). Seek() is particularly challenging because the value it
  returns might be a valid file position and not an error.

- Replaced numeric function return codes of 0 and -1 with macros OK,
  SEEK_ERROR/ERROR to clarify the respective purposes.

- Changed how ftell() and fseek() are used, double-checking the return
  value and the errno code.

- The record locking semaphore could wind up getting added to the public
  list twice. Fixed.

- Fixed two linker errors which were caused by duplicate symbol definitions.

- Added code to the startup routine which allows you to monitor where a command
  was started from and which parameters it was invoked with.

- If fread()/fwrite() fail to read/write any data because either the number
  of records or the size of each record is zero, both now call clearerr() to
  avoid giving the caller the wrong impression that an EOF or error occured.

- The libunix.a flavour of system() no longer attempts to translate the name
  of a command unless it contains path separator characters.

- Added strtof(), llabs(), lldiv(), vsscanf() and vscanf() for C99.

- strftime() now supports %C, %n, %r, %R, %t, %T, %u, %V, and %z for C99.
  And it ignores the E and O modifiers.

- The printf() family now supports the %hh, %j, %t and %z modifiers and the
  %a/%A conversions for C99. The %j is treated like %ll; %t and %z are treated
  like %l. Also, the "infinity"/"not a number" signals now come out as the
  strings "inf" and "nan".

- Added HUGE_VALF to <math.h>.
